working on design

--- a/academics.html
+++ b/academics.html
@@ -5,28 +5,28 @@
     <meta charset="utf-8">
     <link href="css/stylesheet.css" rel="stylesheet">
   </head>
-  <nav>
-    <ul>
-      <li><a href=index.html>Home</a></li>
-      <li><a href=about-me.html>About Me</a></li>
-      <li><a href=my-work.html>My Work</a></li>
-      <li><a href=academics.html>Academics</a></li>
-    </ul>
-  </nav>
   <body>
+    <nav>
+      <ul>
+        <li><a href=index.html>Home</a></li>
+        <li><a href=about-me.html>About Me</a></li>
+        <li><a href=my-work.html>My Work</a></li>
+        <li><a href=academics.html>Academics</a></li>
+      </ul>
+    </nav>
     <header>
       <h1>Academics</h1>
     </header>
     <main>
       <section>
-        <h2><a href="assets/research-paper.pdf">The Pro-Life Movement and the Use of Emotional Rhetoric</a></h2>
+        <h2><a href="../assets/research-paper.pdf">The Pro-Life Movement and the Use of Emotional Rhetoric</a></h2>
         <p>These two court cases, and the difference in their language and decisions, are imperative in understanding the impact of a movement’s rhetoric on political decisions. While Roe insists that fetuses are not people, Casey uses language which, “allowed pro-life advocates to assert the state's interest in protecting fetal life,” therefore encouraging, “a public perception of the fetus as a baby, rather than as something that will become a baby,” (Halva-Neubauer and Zeigler 103).</p>
         <p>The impact of the fight for an amendment for fetuses as people can be clearly seen in the language of this  case, and the difference between this and the language in Roe exemplifies the impact this rhetoric has over time. In this sense, although the direct fight for the right of fetal personhood died with the passage of Casey in 1992, the rhetoric set a precedent for the use of pro-life language in legal and political instences.</p>
         <p>The historical context, therefore demonstrates the ability of the pro-life movement to define the terms of the abortion debate through their own lens and creates a legal foundation for the movement to continue limiting abortion today. Additionally, the language in legal precedents encourages the same use in social and individual spheres, thus normalizing the rhetoric and increasing its effectiveness in all areas.</p>
         <p>(PDF,101KB)</p>
       </section>
       <section>
-        <h2><a href="personal-essay-sample.pdf">When Will My Coming of Age Story End?</a></h2>
+        <h2><a href="assets/personal-essay-sample.pdf">When Will My Coming of Age Story End?</a></h2>
         <p> Fed up with the dishonesty and lack of authenticity, the main character answers truthfully- she would take O’Hare airport, in all its chaos and independence. The main character is struggling to navigate growing up, and so instead of pretending like she knows what she values, she brings instead the airport that matches her confusion and isolation. Rather than recognizing the bravery in her honesty here, most of her classmates aren’t paying attention- too focused on themselves to relate. In this circle full of insincerity, I can see my younger self, and my childhood best friend takes on the face of the main character.</p>
         <p>I’m sitting in a circle on the floor of my 5th grade classroom with the popular girls. My best friend, Sarah, is drawing one of the others while continuously shrugging her shoulders to keep her pink, off-the-shoulder top in the right place. Her shirt was perfectly in style, Justice brand, matching the pink hair tie that clashed with her bright red hair, and only in dresscode because of the grey tank top she wore under it. I sat in the circle quietly, watching with mild
 embarrassment as Sarah tried so hard to fit in with this group. She was too loud for them, with her own opinions and bossy manner. I knew this, and I knew these girls liked me better. The two of us were lucky to be included, and I wished Sarah could see they were just lending a polite, social favor, nothing more.</p>
