--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
         <li><a href=academics.html>Academics</a></li>
       </ul>
     </nav>
-    <main id=home>
-      <section>
-        <img src="images/anna-photo.jpg" alt="Headshot of Anna Steingruber">
+    <main>
+      <figure>
+        <img src="images/headshot.jpg" alt="Headshot of Anna Steingruber">
         <figcaption>Courtesy of Cristina de la Rosa</figcaption>
-      </section>
+      </figure>
       <section>
-        <p>A writer with abilities and interests in journalism, creative, and media writing, I have a year experience working with online media. I hope to continue my career in the writing and publishing world words and am passionate about sharing stories to all audiences. My professional, personal, and academic experiences have given me a diverse skillset and understanding of the world.   </p>
+        <h2>Who I Am</h2>
+        <p>A writer with abilities and interests in journalism, creative, and media writing, I have a year experience working with online media. I hope to continue my career in the writing and publishing world words and am passionate about sharing stories to all audiences. My professional, personal, and academic experiences have given me a diverse skillset and understanding of the world.</p>
+        <h2>Contact Me</h2>
+          <ul>
+            <li><a href="mailto:annasteingruber45@gmail.com">Email</a></li>
+            <li><a href="tel:+16784715561">Phone</a>
+          </ul>
       </section>
     </main>
   </body>
