--- a/my-work.html
+++ b/my-work.html
@@ -5,29 +5,42 @@
     <meta charset="utf-8">
     <link href="css/stylesheet.css" rel="stylesheet">
   </head>
-  <nav>
-    <ul>
-      <li><a href=index.html>Home</a></li>
-      <li><a href=about-me.html>About Me</a></li>
-      <li><a href=my-work.html>My Work</a></li>
-      <li><a href=academics.html>Academics</a></li>
-    </ul>
-  </nav>
   <body>
+    <nav>
+      <ul>
+        <li><a href=index.html>Home</a></li>
+        <li><a href=about-me.html>About Me</a></li>
+        <li><a href=my-work.html>My Work</a></li>
+        <li><a href=academics.html>Academics</a></li>
+      </ul>
+    </nav>
     <header>
       <h1>Professional Work</h1>
     </header>
-    <main>
+    <main id=my-work>
+      <figure>
+        <a href="https://www.lovewhatmatters.com/biological-dad-gains-full-custody-of-son-hires-loving-foster-mom-as-babysitter/"><img src="images/lwm-story-1.jpeg" alt="Mom and foster son together"></a>
+        <figcaption>By Anna Steingruber for Love What Matters</figcaption>
+      </figure>
       <section>
-          <p><a href="https://www.lovewhatmatters.com/biological-dad-gains-full-custody-of-son-hires-loving-foster-mom-as-babysitter/">Biological Dad Gains Full Custody Of Son, Hires Loving Foster Mom As Babysitter So She Can Remain In His Life
-</a></p>
-          <p><a href="https://www.lovewhatmatters.com/woman-normalizing-unique-birthmarks-port-wine-stain-kindness-art-painting/">This Woman Normalizing Unique Birthmarks Through Stunning Portraits Of Strangers Is A Breath Of Fresh Air</a></p>
-          <p><a href="https://www.lovewhatmatters.com/travel-vloggers-bipoc-friendly-resources/">After Uncomfortable Experiences, Vloggers Dedicate Lives To Highlighting BIPOC-Friendly Travel Destinations</a></p>
-
-
+        <h2>Biological Dad Gains Full Custody Of Son, Hires Loving Foster Mom As Babysitter So She Can Remain In His Life</h2>
+        <p>This is the most popular story I have written in my work at Love What Matters with over 16,000 shares on social media. The story taught me the importance of understanding brand fit content. I initially struggled here as the interview was difficult and did not give me all the information and quotes I would have wanted. Learning to work through these difficulties to get such good results taught me how to utilize what I have to ensure the hightest quality story gets out.</p>
       </section>
+      <figure>
+        <a href="https://www.lovewhatmatters.com/woman-normalizing-unique-birthmarks-port-wine-stain-kindness-art-painting/"><img src="images/lwm-story-2.jpeg" alt="Woman with Port Wine Stain birthmarks shows of art"></a>
+        <figcaption>By Anna Steingruber for Love What Matters</figcaption>
+      </figure>
       <section>
-        <p>discussion on the stories</p>
+        <h2>This Woman Normalizing Unique Birthmarks Through Stunning Portraits Of Strangers Is A Breath Of Fresh Air</h2>
+        <p>This story was one of the first I wrote and still remains one of my favorites. The woman I interviewed, Cecilia, was wonderful to work with, and we still keep in touch through social media. This story gave me the confidence to continue stories that spoke to me and showed me the importance of highlighting stories that people otherwise wouldn't have seen.</p>
+      </section>
+      <figure>
+        <a href="https://www.lovewhatmatters.com/travel-vloggers-bipoc-friendly-resources/"><img src="images/lwm-story-3.jpeg" alt="Black couple traveling and sharing experiences with racim."></a>
+        <figcaption>By Anna Steingruber for Love What Matters</figcaption>
+      </figure>
+      <section>
+        <h2>After Uncomfortable Experiences, Vloggers Dedicate Lives To Highlighting BIPOC-Friendly Travel Destinations</h2>
+        <p>This story meant a lot to me because I had heard a lot about Traveling While Black from many of my friends who would rave about the work they did. Being able to share this story on a larger platform felt really important to me as I always work to include stories which hihglight the different expereinces of people throughout the country and raise awareness of issues like racism, sexism, or homophobia. Realizing that I can work on stories important to me while still working within a brand was a huge learning experience for me.</p>
       </section>
     </main>
   </body>
