--- a/about-me.html
+++ b/about-me.html
@@ -7,12 +7,55 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href=index.html>Home</a></li>
+        <li><a href=about-me.html>About Me</a></li>
+        <li><a href=my-work.html>My Work</a></li>
+        <li><a href=academics.html>Academics</a></li>
+      </ul>
+    </nav>
     <header>
-      <h1>About Me</h2>
+      <h1>About Me</h1>
     </header>
-  <main>
-
-
-  </main>
+    <main>
+      <section>
+        <h2>Academics</h2>
+        <h3>Bachelor of Arts in Political Science and Electronic Media</h3>
+        <p>University of Miami 2019-202</p>
+        <p>Foote Fellow Honor Program</p>
+        <p>Program Dean’s List: Fall 2019-Spring 2022</p>
+        <p>Minors in Gender and Sexuality Studies Spanish, and English</p>
+      </section>
+      <section>
+        <h2>Work Experience</h2>
+        <h3>Content Curator at Love What Matters</h3>
+        <p>March 2022-Present</p>
+        <ul>
+          <li>Use social media to find stories and topics that are a good brand fit.</li>
+          <li>Interview people and research topics to write journalistic style articles.</li>
+          <li>Publish stories using WordPress following brand outlines and SEO principles.</li>
+          <li>Create email campaigns to emphasize top stories and help grow audience.</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Extracurriculars</h2>
+          <ul>
+            <li>Colorguard Captain- Frost Band of the Hour</li>
+            <li>Sister of Tau Beta Sigma</li>
+            <li>Staff writer for The Miami Hurricane</li>
+          </ul>
+      </section>
+      <section>
+        <h2>Skills</h2>
+          <ul>
+            <li>Proficient in Adobe Suite</li>
+            <li>WordPress Building</li>
+            <li>Conversational Spanish</li>
+            <li>HTML and CSS</li>
+            <li>SEO best practices</li>
+          </ul>
+      </section>
+    </main>
   </body>
 </html>
