--- a/academics.html
+++ b/academics.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <section>
-        <h2><a href="../assets/research-paper.pdf">The Pro-Life Movement and the Use of Emotional Rhetoric</a></h2>
+        <h2><a href="assets/research-paper.pdf">The Pro-Life Movement and the Use of Emotional Rhetoric</a></h2>
         <p>These two court cases, and the difference in their language and decisions, are imperative in understanding the impact of a movement’s rhetoric on political decisions. While Roe insists that fetuses are not people, Casey uses language which, “allowed pro-life advocates to assert the state's interest in protecting fetal life,” therefore encouraging, “a public perception of the fetus as a baby, rather than as something that will become a baby,” (Halva-Neubauer and Zeigler 103).</p>
         <p>The impact of the fight for an amendment for fetuses as people can be clearly seen in the language of this  case, and the difference between this and the language in Roe exemplifies the impact this rhetoric has over time. In this sense, although the direct fight for the right of fetal personhood died with the passage of Casey in 1992, the rhetoric set a precedent for the use of pro-life language in legal and political instences.</p>
         <p>The historical context, therefore demonstrates the ability of the pro-life movement to define the terms of the abortion debate through their own lens and creates a legal foundation for the movement to continue limiting abortion today. Additionally, the language in legal precedents encourages the same use in social and individual spheres, thus normalizing the rhetoric and increasing its effectiveness in all areas.</p>
