figuring out pdfs

--- a/my-work.html
+++ b/my-work.html
@@ -17,7 +17,7 @@
     <header>
       <h1>Professional Work</h1>
     </header>
-    <main id=my-work>
+    <main>
       <figure>
         <a href="https://www.lovewhatmatters.com/biological-dad-gains-full-custody-of-son-hires-loving-foster-mom-as-babysitter/"><img src="images/lwm-story-1.jpeg" alt="Mom and foster son together"></a>
         <figcaption>By Anna Steingruber for Love What Matters</figcaption>
