--- a/about-me.html
+++ b/about-me.html
@@ -11,25 +11,23 @@
         <li><a href=index.html>Home</a></li>
         <li><a href=about-me.html>About Me</a></li>
         <li><a href=my-work.html>My Work</a></li>
-        <li><a href=academics.html>Academics</a></li>
       </ul>
     </nav>
     <header>
       <h1>About Me</h1>
     </header>
-    <main>
+    <main id=about-me>
       <section>
         <h2>Academics</h2>
-        <h3>Bachelor of Arts in Political Science and Electronic Media</h3>
-        <p>University of Miami 2019-202</p>
+        <h3>University of Miami 2019-2023</h3>
+        <p>Bachelor of Arts in Political Science and Electronic Media</p>
+        <p>Minors in Gender and Sexuality Studies, Spanish, and English</p>
         <p>Foote Fellow Honor Program</p>
         <p>Program Dean’s List: Fall 2019-Spring 2022</p>
-        <p>Minors in Gender and Sexuality Studies Spanish, and English</p>
       </section>
       <section>
         <h2>Work Experience</h2>
-        <h3>Content Curator at Love What Matters</h3>
-        <p>March 2022-Present</p>
+        <h3>Love What Matters March 2022-Present</h3>
         <ul>
           <li>Use social media to find stories and topics that are a good brand fit.</li>
           <li>Interview people and research topics to write journalistic style articles.</li>
